--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="loader">
 
-        <h3>Tomorrow,s</h3>
+        <h3>Tomorrow's</h3>
         <h3>&nbsp;&nbsp;Brand, </h3>
         <h3>&nbsp;&nbsp;Today " ™️</h3>
 
