--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="services.css">
+    <link rel="shortcut icon" href="./images/black bg logo.png" type="image/x-icon">
     <title>Elevators Media</title>
 </head>
 <body>
