--- a/contact.html
+++ b/contact.html
@@ -71,12 +71,12 @@
                  <div class="contact">
                         <h1>Get in touch</h1>
                         <div class="secContact" id="content2">
-                            <a class="secPhone" href="https://api.whatsapp.com/send?phone=8456955906" target="_blank">
+                            <a class="secPhone" href="https://api.whatsapp.com/send?phone=9178078181" target="_blank">
                               <div class="phone"></div>
                               <div class="phoneNumber">9178078181</div>
                             </a>
                             <a class="secMail" href="mailto:elevatorsmedia@gmail.com">
-                              <div class="mail"></div>Send message
+                              <div class="mail"></div><div class="msg">Send message</div>
                             </a>
                           </div>
                           <div class="secSocial" id="content3">
